8358777: [lworld] Allow explicit super invocation in canonical constructors